# when-to-verify

./: .cursorindexingignore  .gitignore  AGENTS.md  DECISIONS.md  README.md  STATUS.md  pyproject.toml
configs/: base.yaml  data_thor.yaml  data_thor_recording_generalization.yaml  generator_seen_occluded_visual_audit.yaml  generator_test.yaml  generator_train.yaml  occupancy_baseline.yaml  occupancy_baseline_production.yaml  paired_variants.yaml  paired_variants_visual_audit.yaml  prediction_protocol_production.json  risk_model.yaml  risk_model_production.yaml  seen_occluded_joint_visual_audit.yaml  verification_actions.yaml  verification_gt.yaml  verify_model.yaml
docs/: README.md  environment_reproduction.md  event_centered_blind_spot_agent_sops.md  event_centered_blind_spot_implementation_spec.md  parallel_acceleration_implementation_plan.md
scripts/: 00_freeze_thor_recording_split.py  00_make_splits.py  00_validate_contracts.py  01_index_recordings.py  02_build_snippet_library.py  03_extract_base_states.py  03_finalize_sop03_artifact.py  04_backfill_risk_sidecars.py  04_build_trajectory_bank.py  04_generate_risk_dataset.py  04_publish_risk_evaluation_records.py  04_seal_risk_dataset.py  05_audit_risk_collection.py  05_generate_events.py  05_render_seen_occluded_visual_audit.py  05_train_occupancy_baseline.py  06_train_risk_model.py  07_calibrate_risk.py  08_generate_verification_dataset.py  09_predict_risk.py  09_train_verification_model.py  10_eval_offline.py  10_evaluate_verification_model.py
src/: __init__.py  contracts.py
tests/: test_atomic_publish.py  (+95 more)
(+121 files in other folders)
