[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-when-to-verify"
version = "0.1.0"
description = "Decision-calibrated hidden-risk learning for robot local planning under occlusion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "PyYAML>=6",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[tool.setuptools]
packages = ["src", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
