[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "learning-when-to-verify"
version = "0.1.0"
description = "Decision-calibrated hidden-risk learning for robot local planning under occlusion"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.24.4",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
]
train = [
    "torch==2.0.1",
]
verification = [
    "torch>=2.0,<3",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.learning-when-to-verify.verified-environment]
status = "sop01-07-verified-training-foundation-provisional"
python = "3.10.14"
pip = "24.2"
setuptools = "82.0.1"
torch = "2.0.1+cu118"
torch-index-url = "https://download.pytorch.org/whl/cu118"
cuda-runtime = "11.8"
cudnn = "8.7.0"
